--- a/trac/locale/el_GR/LC_MESSAGES/messages.po
+++ b/trac/locale/el_GR/LC_MESSAGES/messages.po
@@ -2270,7 +2270,7 @@ msgstr ""
 #: trac/ticket/templates/query.html:231
 #, fuzzy
 msgid "Delete query"
-msgstr "Διαγράψετε ερωτήματος"
+msgstr "Διαγραφή ερωτήματος"
 
 #: trac/ticket/templates/query.html:238
 #: trac/ticket/templates/report_edit.html:36
@@ -2306,7 +2306,7 @@ msgstr ""
 #: trac/ticket/templates/report_view.html:39
 #, fuzzy
 msgid "Delete report"
-msgstr "Διαγράψετε έκθεση"
+msgstr "Διαγραφή έκθεση"
 
 #: trac/ticket/templates/report_delete.html:27
 #: trac/ticket/templates/report_edit.html:50
@@ -3217,7 +3217,7 @@ msgstr ""
 #: trac/wiki/templates/wiki_delete.html:22
 #, fuzzy
 msgid "Delete"
-msgstr "Διαγράψετε"
+msgstr "Διαγραφη"
 
 #: trac/wiki/templates/wiki_delete.html:26
 msgid "Are you sure you want to"
@@ -3238,12 +3238,12 @@ msgstr ""
 #: trac/wiki/templates/wiki_diff.html:16
 #, fuzzy, python-format
 msgid "Delete version %(old_version)d to version %(version)d"
-msgstr "Διαγράψετε έκδοση %(old_version)d σε έκδοση %(version)d"
+msgstr "Διαγραφή έκδοσης %(old_version)d σε έκδοση %(version)d"
 
 #: trac/wiki/templates/wiki_diff.html:17
 #, fuzzy, python-format
 msgid "Delete version %(version)d"
-msgstr "Διαγράψετε έκδοση %(version)d"
+msgstr "Διαγραφή έκδοσης %(version)d"
 
 #: trac/wiki/templates/wiki_edit.html:28
 msgid "Editing"
