--- a/THANKS
+++ b/THANKS
@@ -4,6 +4,7 @@
  * Christopher Armstrong          radix
  * Jani Averbach                  jaa@jaa.iki.fi
  * Juanma Barranquero             lektu@terra.es
+ * Remy Blank                     remy.blank@pobox.com
  * Christian Boos                 cboos@bct-technology.com
  * Rocky Burt                     rocky.burt@myrealbox.com
  * Toni Brkic                     toni.brkic@switchcore.com
