--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Trac 0.11.1 (? ?, 2008)
+http://svn.edgewall.org/repos/trac/tags/trac-0.11.1
+
+ Trac 0.11.1 contains a number of bug fixes and minor enhancements.
+ The following list contains only a few highlights:
+
+ * Safer default umask value for tracd (can be set using --umask option)
+ * Improved DB connection handling (new connection pool)
+
+ The complete list of closed tickets can be found here:
+   http://trac.edgewall.org/query?status=closed&milestone=0.11.1
+
 Trac 0.11 'Genshi' (June 22, 2008)
 http://svn.edgewall.org/repos/trac/tags/trac-0.11
 
